fixed alignment bug for ezra head

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -442,7 +442,7 @@ span.highlight {
     width: 100%;
     padding-left: 65px;
     z-index: +2;
-    background: #b31b1b url('/img/ezra.png') no-repeat 0 0;
+    background: #b31b1b url('/img/ezra.png') no-repeat 2px 0;
     color: #eee !important;
 }
 
@@ -457,7 +457,7 @@ span.highlight {
     z-index: +2;
     height: 50px;
     line-height: 50px;
-    background: #b31b1b url('/img/ezra.png') no-repeat 0 0;
+    background: #b31b1b url('/img/ezra.png') no-repeat 2px 0;
     color: #eee !important;
 
     h2 {
@@ -493,10 +493,6 @@ div.thread-row {
     padding: 0;
     height: @row-height;
     line-height: @row-height;
-}
-
-div.thread-row:not(.sticky, .unread, .locked):nth-child(2n+2) {
-    background: #f8f8f8;
 }
 
 div.thread-row.unread {
